@@ -1,5 +1,11 @@
 2013-11-19  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/57517
+	* gfortran.fortran-torture/compile/pr57517.f90: New testcase.
+	* gcc.dg/torture/pr57517.c: Likewise.
+
+2013-11-19  Richard Biener  <rguenther@suse.de>
+
 	Backport from mainline
 	2013-11-05  Richard Biener  <rguenther@suse.de>
 
