@@ -1,5 +1,11 @@
 2013-11-19  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/57517
+	* tree-predcom.c (combinable_refs_p): Verify the combination
+	is always executed when the refs are.
+
+2013-11-19  Richard Biener  <rguenther@suse.de>
+
 	Backport from mainline
 	2013-11-05  Richard Biener  <rguenther@suse.de>
 
